--- a/Week5/views/newTask.html
+++ b/Week5/views/newTask.html
@@ -13,7 +13,7 @@
         Task name: <input type="text">
         Task due: <input type="date">
         Task desc: <input type="text">
-        <input type="submit">
+        <input type="submit" value="Submit">
     </form>
 </body>
 </html>
