Further progress made

--- a/Week5/views/index.html
+++ b/Week5/views/index.html
@@ -8,6 +8,9 @@
     <title>The To-Do App</title>
 </head>
 <body>
+    <h1>
+        <img src="pika.jpg">
+    </h1>
     <a href="/newTask">Add new task</a>
     <a href="/listTasks">List all tasks</a>
 </body>
