--- a/Week5/views/newTask.html
+++ b/Week5/views/newTask.html
@@ -10,9 +10,9 @@
     <a href="http://127.0.0.1:8080/">Home</a>
     <a href="http://127.0.0.1:8080/listTasks">List all tasks</a>
     <form action="/newTask" method="POST">
-        Task name: <input type="text">
-        Task due: <input type="date">
-        Task desc: <input type="text">
+        Task name: <input type="text" name="taskname">
+        Task due: <input type="date" name="taskdue">
+        Task desc: <input type="text" name="taskdesc">
         <input type="submit" value="Submit">
     </form>
 </body>
