--- a/Week5/views/listTasks.html
+++ b/Week5/views/listTasks.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <a href="http://127.0.0.1:8080/">Home</a>
-    <a href="http://127.0.0.1:8080/newTask">New Task</a>
+    <a href="http://127.0.0.1:8080/newTask">Add new task</a>
     <h1>Tasks Created</h1>
     <table>
         <tr>
