--- a/Week5/css/index.css
+++ b/Week5/css/index.css
@@ -1,3 +1,16 @@
 body {
     background: linear-gradient( #1fc8db, #2cb5e8) fixed;
 }
+
+a:link, a:visited {
+    background-color: #f44336;
+    color: white;
+    padding: 15px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+
+a:hover, a:active {
+    background-color: red;
+}
