--- a/Week5/css/newTask.css
+++ b/Week5/css/newTask.css
@@ -27,3 +27,16 @@ input {
 .input-field {
     margin-bottom: 10px;
 }
+
+a:link, a:visited {
+    background-color: #f44336;
+    color: white;
+    padding: 15px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+
+a:hover, a:active {
+    background-color: red;
+}
