--- a/Week5/views/index.html
+++ b/Week5/views/index.html
@@ -11,6 +11,7 @@
     <header>
         <img src="pika.jpg">
     </header>
+    <h1>To-Do App</h1>
     <a href="/newTask">Add new task</a>
     <a href="/listTasks">List all tasks</a>
 </body>
