--- a/Week5/views/newTask.html
+++ b/Week5/views/newTask.html
@@ -8,8 +8,8 @@
     <title>New Task</title>
 </head>
 <body>
-    <a href="http://127.0.0.1:8080/">Home</a>
-    <a href="http://127.0.0.1:8080/listTasks">List all tasks</a>
+    <a href="/">Home</a>
+    <a href="/listTasks">List all tasks</a>
     <div class="form-container">
         <form action="/newTask" method="POST">
             <p>
