--- a/Week6/views/index.html
+++ b/Week6/views/index.html
@@ -14,5 +14,7 @@
     <h1>To-Do App</h1>
     <a href="/newTask">Add new task</a>
     <a href="/listTasks">List all tasks</a>
+    <a href="/updateTask">Update task</a>
+    <a href="/deleteTasks">Delete tasks</a>
 </body>
 </html>
