--- a/Week6/views/listTasks.html
+++ b/Week6/views/listTasks.html
@@ -10,20 +10,34 @@
 <body>
     <a href="/">Home</a>
     <a href="/newTask">Add new task</a>
+    <a href="/updateTask">Update task</a>
+    <a href="/deleteTasks">Delete tasks</a>
     <h1>Tasks Created</h1>
     <table>
         <tr>
+            <th>ID</th>
             <th>Name</th>
+            <th>Assigned To</th>
             <th>Due Date</th>
+            <th>Status</th>
             <th>Desc</th>
         </tr>
         <% for ( let i =0; i < tasks.length; i++) { %>
             <tr>
                 <td>
+                    <%= tasks[i].taskid %>
+                </td>
+                <td>
                     <%= tasks[i].taskname %>
                 </td>
                 <td>
+                    <%= tasks[i].taskassignedto %>
+                </td>
+                <td>
                     <%= tasks[i].taskdue %>
+                </td>
+                <td>
+                    <%= (tasks[i].taskcomplete ? 'Complete' : 'In Progress') %>
                 </td>
                 <td>
                     <%= tasks[i].taskdesc %>
