Create and list devs

--- a/Week7/views/index.html
+++ b/Week7/views/index.html
@@ -12,9 +12,11 @@
         <img src="pika.jpg">
     </header>
     <h1>To-Do App</h1>
-    <a href="/newTask">Add new task</a>
+    <a href="/newDev">Register a new developer</a>
+    <a href="/listDevs">List all developers</a>
+    <a href="/newTask">Add a new task</a>
     <a href="/listTasks">List all tasks</a>
-    <a href="/updateTask">Update task</a>
+    <a href="/updateTask">Update a task</a>
     <a href="/deleteTasks">Delete tasks</a>
 </body>
 </html>
