Week 7 using mongoose

--- a/Week7/css/newTask.css
+++ b/Week7/css/newTask.css
@@ -19,6 +19,11 @@ input {
     margin-bottom: 20px; 
 }
 
+select { 
+    display: table-cell;
+    margin-bottom: 20px; 
+}
+
 .form-container {
     flex-direction: column;
     margin-top: 30px;
