--- a/Week7/views/listDevs.html
+++ b/Week7/views/listDevs.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <a href="/">Home</a>
-    <a href="/newTask">Add new task</a>
-    <a href="/updateTask">Update task</a>
+    <a href="/newDev">Register a new developer</a>
+    <a href="/newTask">Add a new task</a>
+    <a href="/listTasks">List all tasks</a>
+    <a href="/updateTask">Update a task</a>
     <a href="/deleteTasks">Delete tasks</a>
     <h1>Developers</h1>
     <table>
