--- a/Week7/views/deleteTasks.html
+++ b/Week7/views/deleteTasks.html
@@ -9,14 +9,16 @@
 </head>
 <body>
     <a href="/">Home</a>
-    <a href="/newTask">Add new task</a>
+    <a href="/newDev">Register a new developer</a>
+    <a href="/listDevs">List all developers</a>
+    <a href="/newTask">Add a new task</a>
     <a href="/listTasks">List all tasks</a>
-    <a href="/updateTask">Update task</a>
+    <a href="/updateTask">Update a task</a>
     <div class="grid-container">
         <div class="grid-item">
             <form action="/deleteTasks" method="POST">
-                <label>Task ID</label>
-                <input type="text" name="taskid">
+                <label for="taskId">Task ID</label>
+                <input id="taskId" type="text" name="_id">
                 <input type="submit" value="Delete">
                 <input type="hidden" name="deletetype" value="byid">
             </form>
