--- a/Week7/views/listTasks.html
+++ b/Week7/views/listTasks.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <a href="/">Home</a>
-    <a href="/newTask">Add new task</a>
-    <a href="/updateTask">Update task</a>
+    <a href="/newDev">Register a new developer</a>
+    <a href="/listDevs">List all developers</a>
+    <a href="/newTask">Add a new task</a>
+    <a href="/updateTask">Update a task</a>
     <a href="/deleteTasks">Delete tasks</a>
     <h1>Tasks Created</h1>
     <table>
@@ -25,22 +27,22 @@
         <% for ( let i = 0; i < tasks.length; i++) { %>
             <tr>
                 <td>
-                    <%= tasks[i].taskid %>
+                    <%= tasks[i]._id %>
                 </td>
                 <td>
-                    <%= tasks[i].taskname %>
+                    <%= tasks[i].name %>
                 </td>
                 <td>
-                    <%= tasks[i].taskassignedto %>
+                    <%= tasks[i].developerId %>
                 </td>
                 <td>
-                    <%= tasks[i].taskdue %>
+                    <%= tasks[i].dueDate %>
                 </td>
                 <td>
-                    <%= (tasks[i].taskcomplete ? 'Complete' : 'In Progress') %>
+                    <%= tasks[i].status %>
                 </td>
                 <td>
-                    <%= tasks[i].taskdesc %>
+                    <%= tasks[i].description %>
                 </td>
             </tr>
             <% }%>
