--- a/Week7/views/updateTask.html
+++ b/Week7/views/updateTask.html
@@ -9,18 +9,22 @@
 </head>
 <body>
     <a href="/">Home</a>
-    <a href="/newTask">Add new task</a>
+    <a href="/newDev">Register a new developer</a>
+    <a href="/listDevs">List all developers</a>
+    <a href="/newTask">Add a new task</a>
     <a href="/listTasks">List all tasks</a>
     <a href="/deleteTasks">Delete tasks</a>
     <form action="/updateTask" method="POST">
         <p>
-            <label>Task ID</label>
-            <input type="text" name="taskid">
+            <label for="taskId">Task ID</label>
+            <input id="taskId" type="text" name="_id" required>
         </p>
         <p>
-            <label for="radio-button">Task status: </label><br>
-            <input id="radio-button" type="radio" name="taskcomplete" value=false>In Progress<br>
-            <input id="radio-button" type="radio" name="taskcomplete" value=true>Complete<br>
+            <label for="status">Task status: </label>
+            <select id="status" name="status">
+                <option value="In Progress">In Progress</option>
+                <option value="Complete">Complete</option>
+            </select>
         </p>
         <input type="submit" value="Submit">
     </form>
