Date required too

--- a/Week9/src/app/app.component.html
+++ b/Week9/src/app/app.component.html
@@ -15,7 +15,7 @@
       </p>
       <p>
         <label for="pubDate">Publication Date</label>
-        <input [(ngModel)]="pubDate" id="pubDate" type="date" name="pubDate">
+        <input [(ngModel)]="pubDate" id="pubDate" type="date" name="pubDate" required>
       </p>
       <p>
         <label>Select Book Type</label>
