--- a/Week9/src/app/app.component.css
+++ b/Week9/src/app/app.component.css
@@ -57,7 +57,7 @@ th, td {
     font-size: 16px;
 }
 
-#deleteBook {
+#deleteBook, #deleteNBooks {
     background-color: red;
     margin-right: 20px;
     border: none;
