--- a/Week9/src/app/app.component.html
+++ b/Week9/src/app/app.component.html
@@ -7,7 +7,28 @@
   <title>Week 9</title>
 </head>
 <body>
-  <div id="inputForm">
+    <form>
+      <p>
+        Section On/Off
+        <input [(ngModel)]="section" type="text" name="section">
+      </p>
+      <p>
+        Section number
+        <input [(ngModel)]="sectionNum" type="number" name="sectionNum">
+      </p>
+      <div *ngIf="section === 'on'"> 
+        <div *ngIf="sectionNum === 1">
+            <h1>Section 1</h1>
+          </div>
+          <div *ngIf="sectionNum === 2">
+            <h1>Section 2</h1>
+          </div>
+          <div *ngIf="sectionNum === 3">
+            <h1>Section 3</h1>
+        </div>
+      </div>
+    </form>
+  <!-- <div id="inputForm">
     <form>
       <p>
         <label for="bookTitle">Book Title</label>
@@ -56,7 +77,7 @@
           <td><button id="deleteBook" (click)="deleteBook(i)">Delete</button></td>
         </tr>
     </table>
-  </div>
+  </div> -->
 </body>
 </html>
 
