--- a/Week10/src/app/actor/actor.component.html
+++ b/Week10/src/app/actor/actor.component.html
@@ -22,9 +22,18 @@
     <li class="nav-item" style="padding-left:0.2in">
       <a class="btn btn-primary" (click)="changeSection(6)">Add Movie</a>
     </li>
+    <li class="nav-item" style="padding-left:0.2in">
+      <a class="btn btn-primary" (click)="changeSection(7)">Delete Movie</a>
+    </li>
+    <li class="nav-item" style="padding-left:0.2in">
+      <a class="btn btn-primary" (click)="changeSection(8)">Delete Preceeding Movies</a>
+    </li>
+    <li class="nav-item" style="padding-left:0.2in">
+      <a class="btn btn-primary" (click)="changeSection(9)">Add Actor to Movie</a>
+    </li>
   </ul>
 </nav>
-<!-- First section: Display all in a tble -->
+<!-- First section: Display all in a table -->
 <div class="section" *ngIf="section==1">
   <table class="table table-striped">
     <tr>
@@ -115,4 +124,41 @@
     <input type="number" class="form-control" id="actorName" [(ngModel)]="year">
   </div>
   <button type="submit" class="btn btn-primary" (click)="onSaveMovie()">Save Movie</button>
+</div>
+<!-- Section 7: Delete movie(s) -->
+<div class="section" *ngIf="section==7">
+  <table class="table table-striped">
+    <tr>
+      <th>Title</th>
+      <th>Year</th>
+      <th>Delete?</th>
+    </tr>
+    <tr *ngFor="let item of moviesDB">
+      <td>{{item.title}}</td>
+      <td>{{item.year}}</td>
+      <td><button type="submit" class="btn btn-primary" (click)="onDeleteMovie(item)">Delete</button></td>
+    </tr>
+  </table>
+</div>
+<!-- Section 8: Delete movie(s) before a given date -->
+<div class="section" *ngIf="section==8">
+  <div class="form-group">
+    <label for="actorName">Year</label>
+    <input type="number" class="form-control" id="actorName" [(ngModel)]="year">
+  </div>
+  <button type="submit" class="btn btn-primary" (click)="onDeletePreceedingMovies()">Delete Movie(s)</button>
+</div>
+<!-- Section 9: Add an actor to a movie -->
+<div class="section" *ngIf="section==9">
+  <div class="form-group">
+    <label for="actorName">Actor</label>
+    <select id="actorName" [(ngModel)]="selectedActor" class="form-control">
+      <option [value]="actor._id" *ngFor="let actor of actorsDB">{{actor.name}}</option>
+    </select>
+    <label for="movieTitle">Movie</label>
+    <select id="movieTitle" [(ngModel)]="selectedMovie" class="form-control">
+      <option [value]="movie._id" *ngFor="let movie of moviesDB">{{movie.title}}</option>
+    </select>
+    <button type="submit" class="btn btn-primary" (click)="onAddActorMovie()">Add Actor to Movie</button>
+  </div>
 </div>
