--- a/Week11/src/app/addmovie/addmovie.component.html
+++ b/Week11/src/app/addmovie/addmovie.component.html
@@ -1,1 +1,11 @@
-<p>addmovie works!</p>
+<div class="section">
+    <div class="form-group">
+      <label for="actorName">Title</label>
+      <input type="text" class="form-control" id="actorName" [(ngModel)]="title">
+    </div>
+    <div class="form-group">
+      <label for="actorName">Release Year</label>
+      <input type="number" class="form-control" id="actorName" [(ngModel)]="year">
+    </div>
+    <button type="submit" class="btn btn-primary" (click)="onSaveMovie()">Save Movie</button>
+</div>
