--- a/Week11/src/app/app.component.html
+++ b/Week11/src/app/app.component.html
@@ -1,16 +1,28 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <ul class="navbar-nav">
       <li class="nav-item">
-          <a class="nav-link" routerLink="/listactors" routerLinkActive="active">List </a>
+          <a class="nav-link" routerLink="/listactors" routerLinkActive="active">List Actors</a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" routerLink="/addactor" routerLinkActive="active">Add </a>
+          <a class="nav-link" routerLink="/addactor" routerLinkActive="active">Add Actors</a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" routerLink="/updateactor" routerLinkActive="active">Update</a>
+          <a class="nav-link" routerLink="/updateactor" routerLinkActive="active">Update Actors</a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" routerLink="/deleteactor" routerLinkActive="active">Delete</a>
+          <a class="nav-link" routerLink="/deleteactor" routerLinkActive="active">Delete Actors</a>
+      </li>
+      <li class="nav-item">
+          <a class="nav-link" routerLink="/listmovies" routerLinkActive="active">List Movies</a>
+      </li>
+      <li class="nav-item">
+          <a class="nav-link" routerLink="/addmovie" routerLinkActive="active">Add Movies</a>
+      </li>
+      <li class="nav-item">
+          <a class="nav-link" routerLink="/deletemovie" routerLinkActive="active">Delete Movies</a>
+      </li>
+      <li class="nav-item">
+          <a class="nav-link" routerLink="/addactormovie" routerLinkActive="active">Add Actor to Movie</a>
       </li>
   </ul>
 </nav>
