--- a/Week11/src/app/deletemovie/deletemovie.component.html
+++ b/Week11/src/app/deletemovie/deletemovie.component.html
@@ -1,1 +1,14 @@
-<p>deletemovie works!</p>
+<div class="section">
+    <table class="table table-striped">
+      <tr>
+        <th>Title</th>
+        <th>Year</th>
+        <th>Delete?</th>
+      </tr>
+      <tr *ngFor="let item of moviesDB">
+        <td>{{item.title}}</td>
+        <td>{{item.year}}</td>
+        <td><button type="submit" class="btn btn-primary" (click)="onDeleteMovie(item)">Delete</button></td>
+      </tr>
+    </table>
+</div>
