--- a/Week11/src/app/listmovies/listmovies.component.html
+++ b/Week11/src/app/listmovies/listmovies.component.html
@@ -1,1 +1,12 @@
-<p>listmovies works!</p>
+<div class="section">
+    <table class="table table-striped">
+      <tr>
+        <th>Title</th>
+        <th>Year</th>
+      </tr>
+      <tr *ngFor="let item of moviesDB">
+        <td>{{item.title}}</td>
+        <td>{{item.year}}</td>
+      </tr>
+    </table>
+</div>
