--- a/Week11/src/app/app.component.html
+++ b/Week11/src/app/app.component.html
@@ -24,6 +24,9 @@
       <li class="nav-item">
           <a class="nav-link" routerLink="/addactormovie" routerLinkActive="active">Add Actor to Movie</a>
       </li>
+      <li class="nav-item">
+          <a class="nav-link" routerLink="/listactors1980" routerLinkActive="active">List 1980 Actors</a>
+      </li>
   </ul>
 </nav>
 <router-outlet></router-outlet>
